--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=AzduinoMath
+name=rngBetter
 version=1.0.0
 author=Spence Konde
 maintainer=Spence Konde (spencekonde@gmail or @SpenceKonde on github)
-sentence=Provides unions for type punning and similar. Provides
-paragraph=This provides: a series of Union typedefs designed for type-punning, for when you need to check only the MSB of a 4 byte value, or for easily serializing and deserializing multibyte variables. This also provides 8, 16, and 32-bit versions of rol() and ror() which will perform rotations the way XORSHIFT and similar algorithms expect (ie, eithout the extra carry bit. I've seen people try to implement XORSHIFT prng's with << and >> - which will never work, because the bits pushed off the end are lost rather than wrapping around, and one bit is always in limbo in the carry bit of the SREG. Other implementations make a copy of the data, shift one of them n places in one direction, and the other (bits-n) in the other. That ensures that they run in pessimal time (though they get the right answer at least).
+sentence=Provides a bunch of options of performant XORSHIFT16 PRNGs.
+paragraph=These return evenly distributed 16-bit numbers. it takes about 1/20th the time that Arduino's random(). Includes a default "good" one, or you can choose any of the full period 16-bit generators. Per included documentation, only about a quarter of them are particularly good.
 category=Math
-url=https://github.com/SpenceKonde/AzduinoMath
+url=https://github.com/SpenceKonde/rngBetter
 architectures=avr,megaavr
